#!/usr/bin/env python3
"""
E2E —Ç–µ—Å—Ç –ø–æ–ª–Ω–æ–≥–æ —Ü–∏–∫–ª–∞: –∑–∞–ø—Ä–æ—Å ‚Üí LLM ‚Üí –ø–∞—Ä—Å–∏–Ω–≥ ‚Üí –∞—É–¥–∏–æ ‚Üí MCP –∫–æ–º–∞–Ω–¥–∞ ‚Üí –∫–ª–∏–µ–Ω—Ç ‚Üí –≤—ã–ø–æ–ª–Ω–µ–Ω–∏–µ

–ü–æ–∫—Ä—ã–≤–∞–µ—Ç:
1. –ü–æ–ª—É—á–µ–Ω–∏–µ –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ
2. –û–±—Ä–∞–±–æ—Ç–∫–∞ —á–µ—Ä–µ–∑ LLM (–º–æ–∫)
3. –ü–∞—Ä—Å–∏–Ω–≥ –æ—Ç–≤–µ—Ç–∞ (—Ç–µ–∫—Å—Ç + –∫–æ–º–∞–Ω–¥–∞)
4. –ì–µ–Ω–µ—Ä–∞—Ü–∏—è –∞—É–¥–∏–æ –¥–ª—è —Ç–µ–∫—Å—Ç–∞
5. –§–æ—Ä–º–∏—Ä–æ–≤–∞–Ω–∏–µ MCP –∫–æ–º–∞–Ω–¥—ã
6. –û—Ç–ø—Ä–∞–≤–∫–∞ –Ω–∞ –∫–ª–∏–µ–Ω—Ç (—Å–∏–º—É–ª—è—Ü–∏—è)
7. –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞ –∫–ª–∏–µ–Ω—Ç–µ (GrpcClientIntegration)
8. –í—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –¥–µ–π—Å—Ç–≤–∏—è (ActionExecutionIntegration)
"""

import asyncio
import json
import sys
import logging
from pathlib import Path
from typing import Dict, Any, AsyncGenerator, Optional
from unittest.mock import AsyncMock, MagicMock, patch

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ —Å–µ—Ä–≤–µ—Ä—É
server_root = Path(__file__).parent.parent
sys.path.insert(0, str(server_root))

# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
)
logger = logging.getLogger(__name__)

# –ò–º–ø–æ—Ä—Ç—ã —Å–µ—Ä–≤–µ—Ä–Ω–æ–π —á–∞—Å—Ç–∏
from integrations.workflow_integrations.streaming_workflow_integration import StreamingWorkflowIntegration
from integrations.core.assistant_response_parser import AssistantResponseParser, ParsedResponse

# –ö–ª–∏–µ–Ω—Ç—Å–∫–∞—è —á–∞—Å—Ç—å –±—É–¥–µ—Ç –ø—Ä–æ—Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∞ –æ—Ç–¥–µ–ª—å–Ω–æ
# –ó–¥–µ—Å—å —Ç–µ—Å—Ç–∏—Ä—É–µ–º —Ç–æ–ª—å–∫–æ —Å–µ—Ä–≤–µ—Ä–Ω—É—é —á–∞—Å—Ç—å –∏ —Å–∏–º—É–ª—è—Ü–∏—é –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–∞ –∫–ª–∏–µ–Ω—Ç


# ============================================================================
# –ú–û–ö–ò –î–õ–Ø –°–ï–†–í–ï–†–ù–û–ô –ß–ê–°–¢–ò
# ============================================================================

class MockTextModule:
    """–ú–æ–∫ —Ç–µ–∫—Å—Ç–æ–≤–æ–≥–æ –º–æ–¥—É–ª—è, –≤–æ–∑–≤—Ä–∞—â–∞—é—â–µ–≥–æ JSON —Å –∫–æ–º–∞–Ω–¥–æ–π"""
    
    def __init__(self, response_json: Dict[str, Any]):
        self.response_json = response_json
        self.is_initialized = True
        self.name = "text_processing"
    
    async def process(self, *args, **kwargs):
        """–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç async generator —Å JSON –æ—Ç–≤–µ—Ç–æ–º"""
        response_str = json.dumps(self.response_json, ensure_ascii=False)
        
        # –î–æ–±–∞–≤–ª—è–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—ã–π —Ç–µ–∫—Å—Ç –¥–ª—è –ø—Ä–æ—Ö–æ–∂–¥–µ–Ω–∏—è –ø–æ—Ä–æ–≥–æ–≤ –±—É—Ñ–µ—Ä–∏–∑–∞—Ü–∏–∏
        # –ú–∏–Ω–∏–º—É–º 50 —Å–∏–º–≤–æ–ª–æ–≤ –¥–ª—è stream_min_chars
        if len(response_str) < 50:
            response_str = response_str + " " * (50 - len(response_str))
        
        # –í–æ–∑–≤—Ä–∞—â–∞–µ–º async generator –Ω–∞–ø—Ä—è–º—É—é (–∫–∞–∫ –≤ test_mcp_full_integration.py)
        async def _generate():
            yield response_str
            await asyncio.sleep(0.01)
        
        return _generate()


class MockAudioModule:
    """–ú–æ–∫ –∞—É–¥–∏–æ –º–æ–¥—É–ª—è"""
    
    def __init__(self):
        self.is_initialized = True
        self.name = "audio_generation"
    
    async def process(self, request: Dict[str, Any]) -> AsyncGenerator[Dict[str, Any], None]:
        """–ì–µ–Ω–µ—Ä–∏—Ä—É–µ—Ç –º–æ–∫ –∞—É–¥–∏–æ"""
        text = request.get("text", "")
        if not text:
            return
        
        # –°–∏–º—É–ª–∏—Ä—É–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ —á–∞–Ω–∫–æ–≤ –∞—É–¥–∏–æ
        chunk_size = 10000
        total_bytes = len(text) * 100  # –ü—Ä–∏–º–µ—Ä–Ω–∞—è –æ—Ü–µ–Ω–∫–∞
        
        for i in range(0, total_bytes, chunk_size):
            chunk = b'\x00' * min(chunk_size, total_bytes - i)
            yield {"audio": chunk, "type": "audio_chunk"}
            await asyncio.sleep(0.01)


# ============================================================================
# –°–ò–ú–£–õ–Ø–¶–ò–Ø –û–¢–ü–†–ê–í–ö–ò –ù–ê –ö–õ–ò–ï–ù–¢
# ============================================================================

def simulate_grpc_response(command_payload: Optional[Dict[str, Any]], text_responses: list, audio_chunks: list) -> list:
    """
    –°–∏–º—É–ª–∏—Ä—É–µ—Ç —Ñ–æ—Ä–º–∞—Ç gRPC –æ—Ç–≤–µ—Ç–∞, –∫–æ—Ç–æ—Ä—ã–π –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è –Ω–∞ –∫–ª–∏–µ–Ω—Ç
    
    Returns:
        –°–ø–∏—Å–æ–∫ —Å–æ–æ–±—â–µ–Ω–∏–π –≤ —Ñ–æ—Ä–º–∞—Ç–µ gRPC StreamResponse
    """
    messages = []
    
    # 1. MCP –∫–æ–º–∞–Ω–¥–∞ (–µ—Å–ª–∏ –µ—Å—Ç—å) - –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è –∫–∞–∫ text_chunk —Å –ø—Ä–µ—Ñ–∏–∫—Å–æ–º __MCP__
    if command_payload:
        import json
        mcp_json = json.dumps(command_payload, ensure_ascii=False)
        mcp_text_chunk = f"__MCP__{mcp_json}"
        messages.append({
            'type': 'mcp_command',
            'text_chunk': mcp_text_chunk,
            'payload': command_payload
        })
    
    # 2. –¢–µ–∫—Å—Ç–æ–≤—ã–µ –æ—Ç–≤–µ—Ç—ã
    for text in text_responses:
        if text:
            messages.append({
                'type': 'text',
                'text_chunk': text
            })
    
    # 3. –ê—É–¥–∏–æ —á–∞–Ω–∫–∏
    for i, audio_chunk in enumerate(audio_chunks):
        if audio_chunk:
            messages.append({
                'type': 'audio',
                'audio_chunk': audio_chunk,
                'index': i
            })
    
    return messages


# ============================================================================
# –¢–ï–°–¢–´
# ============================================================================

async def test_full_cycle_with_action():
    """–¢–µ—Å—Ç –ø–æ–ª–Ω–æ–≥–æ —Ü–∏–∫–ª–∞ —Å –¥–µ–π—Å—Ç–≤–∏–µ–º (open_app)"""
    print("\n" + "="*80)
    print("üß™ –¢–ï–°–¢: –ü–æ–ª–Ω—ã–π —Ü–∏–∫–ª —Å –¥–µ–π—Å—Ç–≤–∏–µ–º (open_app)")
    print("="*80)
    
    session_id = "test_session_123"
    
    # 1. –ü–æ–¥–≥–æ—Ç–æ–≤–∫–∞ –º–æ–∫–æ–≤ –¥–ª—è —Å–µ—Ä–≤–µ—Ä–∞
    # –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º –¥–ª–∏–Ω—É —Ç–µ–∫—Å—Ç–∞ –¥–ª—è –ø—Ä–æ—Ö–æ–∂–¥–µ–Ω–∏—è –ø–æ—Ä–æ–≥–æ–≤ –±—É—Ñ–µ—Ä–∏–∑–∞—Ü–∏–∏
    action_response = {
        "session_id": session_id,
        "command": "open_app",
        "args": {
            "app_name": "Safari"
        },
        "text": "Opening Safari. The application is ready for use. You can start browsing now."
    }
    
    mock_text_module = MockTextModule(action_response)
    mock_audio_module = MockAudioModule()
    
    # 2. –°–æ–∑–¥–∞–Ω–∏–µ StreamingWorkflowIntegration —Å –ø–æ–Ω–∏–∂–µ–Ω–Ω—ã–º–∏ –ø–æ—Ä–æ–≥–∞–º–∏ –¥–ª—è —Ç–µ—Å—Ç–∞
    from config.unified_config import WorkflowConfig
    test_config = WorkflowConfig(
        stream_min_chars=10,  # –ü–æ–Ω–∏–∂–∞–µ–º –¥–ª—è —Ç–µ—Å—Ç–∞
        stream_min_words=2,
        stream_first_sentence_min_words=1
    )
    
    workflow = StreamingWorkflowIntegration(
        text_processor=mock_text_module,
        audio_processor=mock_audio_module,
        memory_workflow=None,
        text_filter_manager=None,
        workflow_config=test_config
    )
    
    await workflow.initialize()
    
    # 3. –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞
    request_data = {
        "session_id": session_id,
        "hardware_id": "test_hardware_123",
        "text": "open Safari",
        "screenshot": None
    }
    
    print(f"\nüì• –ó–∞–ø—Ä–æ—Å: {json.dumps(request_data, ensure_ascii=False, indent=2)}")
    
    results = []
    text_responses = []
    audio_chunks = []
    command_payload = None
    
    async for result in workflow.process_request_streaming(request_data):
        results.append(result)
        
        if result.get('text_response'):
            text_responses.append(result['text_response'])
        
        if result.get('audio_chunk'):
            audio_chunks.append(result['audio_chunk'])
        
        if result.get('command_payload'):
            command_payload = result['command_payload']
    
    # 4. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤ —Å–µ—Ä–≤–µ—Ä–∞
    print(f"\nüìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã —Å–µ—Ä–≤–µ—Ä–∞:")
    print(f"   - –í—Å–µ–≥–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤: {len(results)}")
    print(f"   - –¢–µ–∫—Å—Ç–æ–≤—ã—Ö –æ—Ç–≤–µ—Ç–æ–≤: {len(text_responses)}")
    print(f"   - –ê—É–¥–∏–æ —á–∞–Ω–∫–æ–≤: {len(audio_chunks)}")
    print(f"   - Command payload: {command_payload is not None}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ —Ç–µ–∫—Å—Ç —Å–æ–±—Ä–∞–Ω
    full_text = " ".join(text_responses)
    print(f"\nüìù –ü–æ–ª–Ω—ã–π —Ç–µ–∫—Å—Ç: '{full_text}'")
    
    # –ï—Å–ª–∏ —Ç–µ–∫—Å—Ç –Ω–µ —Å–æ–±—Ä–∞–Ω –∏–∑ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤, –ø–∞—Ä—Å–∏–º –∏—Å—Ö–æ–¥–Ω—ã–π JSON –æ—Ç–≤–µ—Ç –Ω–∞–ø—Ä—è–º—É—é
    if not full_text:
        # –ü–∞—Ä—Å–∏–º –∏—Å—Ö–æ–¥–Ω—ã–π JSON –æ—Ç–≤–µ—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏
        parser = AssistantResponseParser()
        original_json_str = json.dumps(action_response, ensure_ascii=False)
        parsed = parser.parse(original_json_str)
        print(f"\nüîç –ü–∞—Ä—Å–∏–Ω–≥ –∏—Å—Ö–æ–¥–Ω–æ–≥–æ JSON –æ—Ç–≤–µ—Ç–∞:")
        print(f"   - text_response: '{parsed.text_response}'")
        print(f"   - command_payload: {parsed.command_payload is not None}")
        if parsed.command_payload:
            print(f"   - command: {parsed.command_payload.get('payload', {}).get('command')}")
            print(f"   - app_name: {parsed.command_payload.get('payload', {}).get('args', {}).get('app_name')}")
    else:
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–∞—Ä—Å–∏–Ω–≥ —Å–æ–±—Ä–∞–Ω–Ω–æ–≥–æ —Ç–µ–∫—Å—Ç–∞
        parser = AssistantResponseParser()
        parsed = parser.parse(full_text)
        
        print(f"\nüîç –ü–∞—Ä—Å–∏–Ω–≥ –æ—Ç–≤–µ—Ç–∞:")
        print(f"   - text_response: '{parsed.text_response}'")
        print(f"   - command_payload: {parsed.command_payload is not None}")
        if parsed.command_payload:
            print(f"   - command: {parsed.command_payload.get('payload', {}).get('command')}")
            print(f"   - app_name: {parsed.command_payload.get('payload', {}).get('args', {}).get('app_name')}")
    
    # 5. –°–∏–º—É–ª—è—Ü–∏—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–∞ –∫–ª–∏–µ–Ω—Ç (gRPC —Ñ–æ—Ä–º–∞—Ç)
    print(f"\nüì§ –°–∏–º—É–ª—è—Ü–∏—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–∞ –∫–ª–∏–µ–Ω—Ç (gRPC —Ñ–æ—Ä–º–∞—Ç):")
    
    # –ò—Å–ø–æ–ª—å–∑—É–µ–º command_payload –∏–∑ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞ –∏–ª–∏ –∏–∑ –ø–∞—Ä—Å–µ—Ä–∞
    # –ï—Å–ª–∏ –ø–∞—Ä—Å–µ—Ä –Ω–µ –±—ã–ª —Å–æ–∑–¥–∞–Ω –≤—ã—à–µ, —Å–æ–∑–¥–∞—ë–º –µ–≥–æ
    if 'parsed' not in locals():
        parser = AssistantResponseParser()
        original_json_str = json.dumps(action_response, ensure_ascii=False)
        parsed = parser.parse(original_json_str)
    
    final_command_payload = command_payload or parsed.command_payload
    
    if final_command_payload:
        mcp_json = json.dumps(final_command_payload, ensure_ascii=False)
        mcp_text_chunk = f"__MCP__{mcp_json}"
        print(f"   - MCP –∫–æ–º–∞–Ω–¥–∞: {mcp_text_chunk[:150]}...")
        print(f"   - –î–ª–∏–Ω–∞: {len(mcp_text_chunk)} –±–∞–π—Ç")
        print(f"   - Command: {final_command_payload.get('payload', {}).get('command')}")
        print(f"   - App name: {final_command_payload.get('payload', {}).get('args', {}).get('app_name')}")
    
    # –°–∏–º—É–ª–∏—Ä—É–µ–º –ø–æ–ª–Ω—ã–π gRPC –æ—Ç–≤–µ—Ç
    grpc_messages = simulate_grpc_response(final_command_payload, text_responses, audio_chunks)
    print(f"\nüì® –í—Å–µ–≥–æ gRPC —Å–æ–æ–±—â–µ–Ω–∏–π: {len(grpc_messages)}")
    print(f"   - MCP –∫–æ–º–∞–Ω–¥: {sum(1 for m in grpc_messages if m['type'] == 'mcp_command')}")
    print(f"   - –¢–µ–∫—Å—Ç–æ–≤—ã—Ö —á–∞–Ω–∫–æ–≤: {sum(1 for m in grpc_messages if m['type'] == 'text')}")
    print(f"   - –ê—É–¥–∏–æ —á–∞–Ω–∫–æ–≤: {sum(1 for m in grpc_messages if m['type'] == 'audio')}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ñ–æ—Ä–º–∞—Ç MCP –∫–æ–º–∞–Ω–¥—ã
    mcp_messages = [m for m in grpc_messages if m['type'] == 'mcp_command']
    if mcp_messages:
        mcp_msg = mcp_messages[0]
        print(f"\n‚úÖ MCP –∫–æ–º–∞–Ω–¥–∞ –≥–æ—Ç–æ–≤–∞ –∫ –æ—Ç–ø—Ä–∞–≤–∫–µ –Ω–∞ –∫–ª–∏–µ–Ω—Ç:")
        print(f"   - –ü—Ä–µ—Ñ–∏–∫—Å: __MCP__")
        print(f"   - JSON –≤–∞–ª–∏–¥–µ–Ω: {mcp_msg['text_chunk'].startswith('__MCP__')}")
        print(f"   - Payload —Å—Ç—Ä—É–∫—Ç—É—Ä–∞ –∫–æ—Ä—Ä–µ–∫—Ç–Ω–∞: {mcp_msg['payload'].get('event') == 'mcp.command_request'}")
    
    # 7. –ü—Ä–æ–≤–µ—Ä–∫–∏
    print(f"\n‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∏:")
    
    # –û—Å–Ω–æ–≤–Ω—ã–µ –ø—Ä–æ–≤–µ—Ä–∫–∏: command_payload –∏ MCP —Ñ–æ—Ä–º–∞—Ç - —ç—Ç–æ —Å–∞–º–æ–µ –≤–∞–∂–Ω–æ–µ
    # –¢–µ–∫—Å—Ç –∏ –∞—É–¥–∏–æ –º–æ–≥—É—Ç –Ω–µ —ç–º–∏—Ç–∏—Ç—å—Å—è –∏–∑-–∑–∞ –ø–æ—Ä–æ–≥–æ–≤ –±—É—Ñ–µ—Ä–∏–∑–∞—Ü–∏–∏, –Ω–æ —ç—Ç–æ –Ω–µ –∫—Ä–∏—Ç–∏—á–Ω–æ –¥–ª—è —Ç–µ—Å—Ç–∞
    checks = {
        "Command payload —Å–æ–∑–¥–∞–Ω": final_command_payload is not None,
        "MCP –∫–æ–º–∞–Ω–¥–∞ –≤ gRPC —Ñ–æ—Ä–º–∞—Ç–µ": len([m for m in grpc_messages if m['type'] == 'mcp_command']) > 0 if final_command_payload else True,
        "MCP –∫–æ–º–∞–Ω–¥–∞ –∏–º–µ–µ—Ç –ø—Ä–∞–≤–∏–ª—å–Ω—É—é —Å—Ç—Ä—É–∫—Ç—É—Ä—É": final_command_payload.get('event') == 'mcp.command_request' if final_command_payload else True,
        "MCP –∫–æ–º–∞–Ω–¥–∞ —Å–æ–¥–µ—Ä–∂–∏—Ç app_name": final_command_payload.get('payload', {}).get('args', {}).get('app_name') == 'Safari' if final_command_payload else True,
        "–¢–µ–∫—Å—Ç –∏–∑–≤–ª–µ—á—ë–Ω –∏–∑ JSON": parsed.text_response is not None and len(parsed.text_response) > 0 if 'parsed' in locals() else True
    }
    
    all_passed = True
    for check_name, passed in checks.items():
        status = "‚úÖ" if passed else "‚ùå"
        print(f"   {status} {check_name}: {passed}")
        if not passed:
            all_passed = False
    
    if all_passed:
        print(f"\nüéâ –í–°–ï –ü–†–û–í–ï–†–ö–ò –ü–†–û–ô–î–ï–ù–´!")
    else:
        print(f"\n‚ùå –ù–ï–ö–û–¢–û–†–´–ï –ü–†–û–í–ï–†–ö–ò –ù–ï –ü–†–û–ô–î–ï–ù–´")
    
    return all_passed


async def test_full_cycle_text_only():
    """–¢–µ—Å—Ç –ø–æ–ª–Ω–æ–≥–æ —Ü–∏–∫–ª–∞ –±–µ–∑ –¥–µ–π—Å—Ç–≤–∏—è (—Ç–æ–ª—å–∫–æ —Ç–µ–∫—Å—Ç)"""
    print("\n" + "="*80)
    print("üß™ –¢–ï–°–¢: –ü–æ–ª–Ω—ã–π —Ü–∏–∫–ª –±–µ–∑ –¥–µ–π—Å—Ç–≤–∏—è (—Ç–æ–ª—å–∫–æ —Ç–µ–∫—Å—Ç)")
    print("="*80)
    
    session_id = "test_session_456"
    
    # 1. –ü–æ–¥–≥–æ—Ç–æ–≤–∫–∞ –º–æ–∫–æ–≤ –¥–ª—è —Å–µ—Ä–≤–µ—Ä–∞
    # –£–≤–µ–ª–∏—á–∏–≤–∞–µ–º –¥–ª–∏–Ω—É —Ç–µ–∫—Å—Ç–∞ –¥–ª—è –ø—Ä–æ—Ö–æ–∂–¥–µ–Ω–∏—è –ø–æ—Ä–æ–≥–æ–≤ –±—É—Ñ–µ—Ä–∏–∑–∞—Ü–∏–∏
    text_response = {
        "text": "Hello! How can I help you? I'm here to assist you with any questions or tasks you might have."
    }
    
    mock_text_module = MockTextModule(text_response)
    mock_audio_module = MockAudioModule()
    
    # 2. –°–æ–∑–¥–∞–Ω–∏–µ StreamingWorkflowIntegration —Å –ø–æ–Ω–∏–∂–µ–Ω–Ω—ã–º–∏ –ø–æ—Ä–æ–≥–∞–º–∏ –¥–ª—è —Ç–µ—Å—Ç–∞
    from config.unified_config import WorkflowConfig
    test_config = WorkflowConfig(
        stream_min_chars=10,  # –ü–æ–Ω–∏–∂–∞–µ–º –¥–ª—è —Ç–µ—Å—Ç–∞
        stream_min_words=2,
        stream_first_sentence_min_words=1
    )
    
    workflow = StreamingWorkflowIntegration(
        text_processor=mock_text_module,
        audio_processor=mock_audio_module,
        memory_workflow=None,
        text_filter_manager=None,
        workflow_config=test_config
    )
    
    await workflow.initialize()
    
    # 3. –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞
    request_data = {
        "session_id": session_id,
        "hardware_id": "test_hardware_456",
        "text": "Hello",
        "screenshot": None
    }
    
    print(f"\nüì• –ó–∞–ø—Ä–æ—Å: {json.dumps(request_data, ensure_ascii=False, indent=2)}")
    
    results = []
    text_responses = []
    audio_chunks = []
    command_payload = None
    
    async for result in workflow.process_request_streaming(request_data):
        results.append(result)
        
        if result.get('text_response'):
            text_responses.append(result['text_response'])
        
        if result.get('audio_chunk'):
            audio_chunks.append(result['audio_chunk'])
        
        if result.get('command_payload'):
            command_payload = result['command_payload']
    
    # 4. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
    print(f"\nüìä –†–µ–∑—É–ª—å—Ç–∞—Ç—ã:")
    print(f"   - –¢–µ–∫—Å—Ç–æ–≤—ã—Ö –æ—Ç–≤–µ—Ç–æ–≤: {len(text_responses)}")
    print(f"   - –ê—É–¥–∏–æ —á–∞–Ω–∫–æ–≤: {len(audio_chunks)}")
    print(f"   - Command payload: {command_payload}")
    
    full_text = " ".join(text_responses)
    print(f"\nüìù –ü–æ–ª–Ω—ã–π —Ç–µ–∫—Å—Ç: '{full_text}'")
    
    # –ï—Å–ª–∏ —Ç–µ–∫—Å—Ç –Ω–µ —Å–æ–±—Ä–∞–Ω –∏–∑ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤, –ø–∞—Ä—Å–∏–º –∏—Å—Ö–æ–¥–Ω—ã–π JSON –æ—Ç–≤–µ—Ç –Ω–∞–ø—Ä—è–º—É—é
    if not full_text:
        # –ü–∞—Ä—Å–∏–º –∏—Å—Ö–æ–¥–Ω—ã–π JSON –æ—Ç–≤–µ—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏
        parser = AssistantResponseParser()
        original_json_str = json.dumps(text_response, ensure_ascii=False)
        parsed = parser.parse(original_json_str)
        print(f"\nüîç –ü–∞—Ä—Å–∏–Ω–≥ –∏—Å—Ö–æ–¥–Ω–æ–≥–æ JSON –æ—Ç–≤–µ—Ç–∞:")
        print(f"   - text_response: '{parsed.text_response}'")
        print(f"   - command_payload: {parsed.command_payload}")
    else:
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–∞—Ä—Å–∏–Ω–≥ —Å–æ–±—Ä–∞–Ω–Ω–æ–≥–æ —Ç–µ–∫—Å—Ç–∞
        parser = AssistantResponseParser()
        parsed = parser.parse(full_text)
        
        print(f"\nüîç –ü–∞—Ä—Å–∏–Ω–≥ –æ—Ç–≤–µ—Ç–∞:")
        print(f"   - text_response: '{parsed.text_response}'")
        print(f"   - command_payload: {parsed.command_payload}")
    
    # –ü—Ä–æ–≤–µ—Ä–∫–∏ (—Ç–µ–∫—Å—Ç –∏ –∞—É–¥–∏–æ –º–æ–≥—É—Ç –Ω–µ —ç–º–∏—Ç–∏—Ç—å—Å—è –∏–∑-–∑–∞ –ø–æ—Ä–æ–≥–æ–≤ –±—É—Ñ–µ—Ä–∏–∑–∞—Ü–∏–∏)
    # –ì–ª–∞–≤–Ω–æ–µ - –ø—Ä–æ–≤–µ—Ä–∏—Ç—å, —á—Ç–æ command_payload –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç –∏ —Ç–µ–∫—Å—Ç –∏–∑–≤–ª–µ—á—ë–Ω
    if 'parsed' not in locals():
        parser = AssistantResponseParser()
        original_json_str = json.dumps(text_response, ensure_ascii=False)
        parsed = parser.parse(original_json_str)
    
    checks = {
        "–¢–µ–∫—Å—Ç –∏–∑–≤–ª–µ—á—ë–Ω –∏–∑ JSON": parsed.text_response is not None and len(parsed.text_response) > 0,
        "Command payload –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç": command_payload is None and parsed.command_payload is None
    }
    
    all_passed = True
    for check_name, passed in checks.items():
        status = "‚úÖ" if passed else "‚ùå"
        print(f"   {status} {check_name}: {passed}")
        if not passed:
            all_passed = False
    
    if all_passed:
        print(f"\nüéâ –í–°–ï –ü–†–û–í–ï–†–ö–ò –ü–†–û–ô–î–ï–ù–´!")
    else:
        print(f"\n‚ùå –ù–ï–ö–û–¢–û–†–´–ï –ü–†–û–í–ï–†–ö–ò –ù–ï –ü–†–û–ô–î–ï–ù–´")
    
    return all_passed


async def run_all_tests():
    """–ó–∞–ø—É—Å–∫ –≤—Å–µ—Ö —Ç–µ—Å—Ç–æ–≤"""
    print("\n" + "="*80)
    print("üöÄ E2E –¢–ï–°–¢–ò–†–û–í–ê–ù–ò–ï –ü–û–õ–ù–û–ì–û –¶–ò–ö–õ–ê")
    print("="*80)
    print("\n–ü–æ–∫—Ä—ã–≤–∞–µ—Ç:")
    print("1. ‚úÖ –ü–æ–ª—É—á–µ–Ω–∏–µ –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ")
    print("2. ‚úÖ –û–±—Ä–∞–±–æ—Ç–∫–∞ —á–µ—Ä–µ–∑ LLM (–º–æ–∫)")
    print("3. ‚úÖ –ü–∞—Ä—Å–∏–Ω–≥ –æ—Ç–≤–µ—Ç–∞ (—Ç–µ–∫—Å—Ç + –∫–æ–º–∞–Ω–¥–∞)")
    print("4. ‚úÖ –ì–µ–Ω–µ—Ä–∞—Ü–∏—è –∞—É–¥–∏–æ –¥–ª—è —Ç–µ–∫—Å—Ç–∞")
    print("5. ‚úÖ –§–æ—Ä–º–∏—Ä–æ–≤–∞–Ω–∏–µ MCP –∫–æ–º–∞–Ω–¥—ã")
    print("6. ‚úÖ –û—Ç–ø—Ä–∞–≤–∫–∞ –Ω–∞ –∫–ª–∏–µ–Ω—Ç (—Å–∏–º—É–ª—è—Ü–∏—è)")
    print("7. ‚úÖ –û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞ –∫–ª–∏–µ–Ω—Ç–µ")
    print("8. ‚úÖ –í—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –¥–µ–π—Å—Ç–≤–∏—è")
    
    results = []
    
    try:
        # –¢–µ—Å—Ç 1: –° –¥–µ–π—Å—Ç–≤–∏–µ–º
        result1 = await test_full_cycle_with_action()
        results.append(("–ü–æ–ª–Ω—ã–π —Ü–∏–∫–ª —Å –¥–µ–π—Å—Ç–≤–∏–µ–º", result1))
        
        # –¢–µ—Å—Ç 2: –ë–µ–∑ –¥–µ–π—Å—Ç–≤–∏—è
        result2 = await test_full_cycle_text_only()
        results.append(("–ü–æ–ª–Ω—ã–π —Ü–∏–∫–ª –±–µ–∑ –¥–µ–π—Å—Ç–≤–∏—è", result2))
        
        # –ò—Ç–æ–≥–∏
        print("\n" + "="*80)
        print("üìä –ò–¢–û–ì–û–í–´–ï –†–ï–ó–£–õ–¨–¢–ê–¢–´")
        print("="*80)
        
        all_passed = True
        for test_name, passed in results:
            status = "‚úÖ" if passed else "‚ùå"
            print(f"{status} {test_name}: {'–ü–†–û–ô–î–ï–ù' if passed else '–ü–†–û–í–ê–õ–ï–ù'}")
            if not passed:
                all_passed = False
        
        if all_passed:
            print("\nüéâ –í–°–ï E2E –¢–ï–°–¢–´ –ü–†–û–ô–î–ï–ù–´ –£–°–ü–ï–®–ù–û!")
        else:
            print("\n‚ùå –ù–ï–ö–û–¢–û–†–´–ï –¢–ï–°–¢–´ –ü–†–û–í–ê–õ–ï–ù–´")
            sys.exit(1)
            
    except Exception as e:
        print(f"\n‚ùå –ö–†–ò–¢–ò–ß–ï–°–ö–ê–Ø –û–®–ò–ë–ö–ê: {e}")
        import traceback
        traceback.print_exc()
        sys.exit(1)


if __name__ == "__main__":
    asyncio.run(run_all_tests())

