#!/usr/bin/env python3
"""
–ò–∑–æ–ª–∏—Ä–æ–≤–∞–Ω–Ω—ã–π —Ç–µ—Å—Ç gRPC –∫–æ–º–º—É–Ω–∏–∫–∞—Ü–∏–∏ —Å production —Å–µ—Ä–≤–µ—Ä–æ–º.
–¢–µ—Å—Ç–∏—Ä—É–µ—Ç —Ç–æ–ª—å–∫–æ StreamAudio RPC –±–µ–∑ –æ—Å—Ç–∞–ª—å–Ω–æ–≥–æ —Ñ—É–Ω–∫—Ü–∏–æ–Ω–∞–ª–∞ –∫–ª–∏–µ–Ω—Ç–∞.
"""

import asyncio
import sys
import logging
from pathlib import Path

# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏–µ
logging.basicConfig(
    level=logging.INFO,
    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
)
logger = logging.getLogger(__name__)

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç–∏ –¥–ª—è –∏–º–ø–æ—Ä—Ç–∞
client_dir = Path(__file__).parent
sys.path.insert(0, str(client_dir))

from modules.grpc_client.core.grpc_client import GrpcClient


async def test_grpc_stream():
    """–¢–µ—Å—Ç–∏—Ä—É–µ—Ç gRPC —Å—Ç—Ä–∏–º —Å production —Å–µ—Ä–≤–µ—Ä–æ–º"""

    # –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –¥–ª—è production —Å–µ—Ä–≤–µ—Ä–∞
    config = {
        'servers': {
            'production': {
                'address': '20.151.51.172',
                'port': 443,
                'use_ssl': True,
                'ssl_verify': False,
                'use_http2': True,
                'timeout': 300,
                'retry_attempts': 3,
                'retry_delay': 1.0,
                'keepalive': True,
                'max_message_size': 50 * 1024 * 1024,
            }
        },
        'auto_fallback': False,
        'connection_timeout': 30,
        'max_retry_attempts': 3,
        'retry_delay': 1.0,
    }

    # –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç
    logger.info("=" * 80)
    logger.info("üöÄ –°–æ–∑–¥–∞–Ω–∏–µ gRPC –∫–ª–∏–µ–Ω—Ç–∞")
    client = GrpcClient(config=config)

    try:
        # –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ production —Å–µ—Ä–≤–µ—Ä—É
        logger.info("=" * 80)
        logger.info("üîå –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ production —Å–µ—Ä–≤–µ—Ä—É: 20.151.51.172:443")
        success = await client.connect('production')

        if not success:
            logger.error("‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ —Å–µ—Ä–≤–µ—Ä—É")
            return False

        logger.info("‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")

        # –¢–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ
        test_prompt = "Hello, how are you?"
        test_hardware_id = "E03D24552A85439BB41CD02E6F62BB75"  # –í–∞—à hardware ID
        test_screenshot = ""  # –ë–µ–∑ —Å–∫—Ä–∏–Ω—à–æ—Ç–∞ –¥–ª—è –ø—Ä–æ—Å—Ç–æ—Ç—ã
        screen_info = {"width": 1920, "height": 1080}

        logger.info("=" * 80)
        logger.info(f"üì§ –û—Ç–ø—Ä–∞–≤–∫–∞ –∑–∞–ø—Ä–æ—Å–∞:")
        logger.info(f"   Prompt: '{test_prompt}'")
        logger.info(f"   Hardware ID: {test_hardware_id[:8]}...")
        logger.info(f"   Screenshot: {'Yes' if test_screenshot else 'No'}")
        logger.info(f"   Screen: {screen_info['width']}x{screen_info['height']}")

        # –°—á–µ—Ç—á–∏–∫–∏ –¥–ª—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏
        response_count = 0
        text_chunks = []
        audio_chunks = []
        audio_bytes_total = 0

        logger.info("=" * 80)
        logger.info("üì• –ü–æ–ª—É—á–µ–Ω–∏–µ –æ—Ç–≤–µ—Ç–æ–≤ –æ—Ç —Å–µ—Ä–≤–µ—Ä–∞:")

        # –°—Ç—Ä–∏–º–∏–º –æ—Ç–≤–µ—Ç—ã
        async for resp in client.stream_audio(
            prompt=test_prompt,
            screenshot_base64=test_screenshot,
            screen_info=screen_info,
            hardware_id=test_hardware_id,
        ):
            response_count += 1

            # –û–ø—Ä–µ–¥–µ–ª—è–µ–º —Ç–∏–ø –æ—Ç–≤–µ—Ç–∞
            which_oneof = resp.WhichOneof('content') if hasattr(resp, 'WhichOneof') else None

            logger.info(f"   Response #{response_count}: type={which_oneof}")

            if which_oneof == 'text_chunk':
                text = resp.text_chunk
                text_chunks.append(text)
                logger.info(f"      üìù Text chunk: '{text[:100]}{'...' if len(text) > 100 else ''}'")

            elif which_oneof == 'audio_chunk':
                ch = resp.audio_chunk
                data = bytes(ch.audio_data) if ch.audio_data else b""
                dtype = ch.dtype or 'int16'
                shape = list(ch.shape) if ch.shape else []

                if len(data) > 0:
                    audio_chunks.append(data)
                    audio_bytes_total += len(data)
                    logger.info(f"      üîä Audio chunk: {len(data)} bytes, dtype={dtype}, shape={shape}")
                else:
                    logger.warning(f"      ‚ö†Ô∏è  Empty audio chunk (skipping)")

            elif which_oneof == 'end_message':
                end_msg = resp.end_message
                logger.info(f"      ‚úÖ End message: '{end_msg}'")
                break

            elif which_oneof == 'error_message':
                err_msg = resp.error_message
                logger.error(f"      ‚ùå Error message: '{err_msg}'")
                return False

            else:
                logger.warning(f"      ‚ö†Ô∏è  Unknown response type: {which_oneof}")

        # –ò—Ç–æ–≥–æ–≤–∞—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞
        logger.info("=" * 80)
        logger.info("üìä –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞:")
        logger.info(f"   –í—Å–µ–≥–æ –æ—Ç–≤–µ—Ç–æ–≤: {response_count}")
        logger.info(f"   –¢–µ–∫—Å—Ç–æ–≤—ã—Ö —á–∞–Ω–∫–æ–≤: {len(text_chunks)}")
        logger.info(f"   –ê—É–¥–∏–æ —á–∞–Ω–∫–æ–≤: {len(audio_chunks)}")
        logger.info(f"   –ê—É–¥–∏–æ –±–∞–π—Ç–æ–≤: {audio_bytes_total}")

        if len(text_chunks) > 0:
            full_text = ''.join(text_chunks)
            logger.info(f"   –ü–æ–ª–Ω—ã–π —Ç–µ–∫—Å—Ç: '{full_text}'")

        # –ü—Ä–æ–≤–µ—Ä–∫–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞
        logger.info("=" * 80)
        if audio_bytes_total > 0:
            logger.info("‚úÖ –¢–ï–°–¢ –£–°–ü–ï–®–ï–ù: –ü–æ–ª—É—á–µ–Ω—ã –∞—É–¥–∏–æ –¥–∞–Ω–Ω—ã–µ")
            return True
        else:
            logger.error("‚ùå –¢–ï–°–¢ –ù–ï –ü–†–û–ô–î–ï–ù: –ê—É–¥–∏–æ –¥–∞–Ω–Ω—ã–µ –ù–ï –ø–æ–ª—É—á–µ–Ω—ã")
            logger.error("   –°–µ—Ä–≤–µ—Ä –∑–∞–≤–µ—Ä—à–∏–ª –æ–±—Ä–∞–±–æ—Ç–∫—É –±–µ–∑ –æ—Ç–ø—Ä–∞–≤–∫–∏ –∞—É–¥–∏–æ!")
            return False

    except Exception as e:
        logger.error(f"‚ùå –û—à–∏–±–∫–∞ –≤–æ –≤—Ä–µ–º—è —Ç–µ—Å—Ç–∞: {e}", exc_info=True)
        return False

    finally:
        # –û—á–∏—Å—Ç–∫–∞
        await client.cleanup()
        logger.info("=" * 80)
        logger.info("üßπ –û—á–∏—Å—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞")


async def main():
    """–ì–ª–∞–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è"""
    logger.info("=" * 80)
    logger.info("üß™ –ò–ó–û–õ–ò–†–û–í–ê–ù–ù–´–ô –¢–ï–°–¢ gRPC –ö–û–ú–ú–£–ù–ò–ö–ê–¶–ò–ò")
    logger.info("=" * 80)

    success = await test_grpc_stream()

    logger.info("=" * 80)
    if success:
        logger.info("‚úÖ –í–°–ï –¢–ï–°–¢–´ –ü–†–û–ô–î–ï–ù–´")
        sys.exit(0)
    else:
        logger.error("‚ùå –¢–ï–°–¢–´ –ù–ï –ü–†–û–ô–î–ï–ù–´")
        sys.exit(1)


if __name__ == '__main__':
    asyncio.run(main())
