#!/usr/bin/env python3
"""
GrpcServiceIntegration - –∫–æ–æ—Ä–¥–∏–Ω–∏—Ä—É–µ—Ç –≤—Å–µ workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
"""

import asyncio
import logging
from typing import Dict, Any, AsyncGenerator, Optional
from datetime import datetime
import sys
from pathlib import Path

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ –º–æ–¥—É–ª—è–º grpc_service
project_root = Path(__file__).parent.parent.parent.parent
sys.path.insert(0, str(project_root))
# –õ–µ–Ω–∏–≤—ã–π –∏–º–ø–æ—Ä—Ç backpressure –¥–ª—è –∏–∑–±–µ–∂–∞–Ω–∏—è —Ü–∏–∫–ª–∏—á–µ—Å–∫–∏—Ö –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–µ–π
# backpressure –∏–º–ø–æ—Ä—Ç–∏—Ä—É–µ—Ç—Å—è —Ç–æ–ª—å–∫–æ –∫–æ–≥–¥–∞ –æ–Ω –¥–µ–π—Å—Ç–≤–∏—Ç–µ–ª—å–Ω–æ –Ω—É–∂–µ–Ω

logger = logging.getLogger(__name__)


class GrpcServiceIntegration:
    """
    –ö–æ–æ—Ä–¥–∏–Ω–∏—Ä—É–µ—Ç –≤—Å–µ workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –¥–ª—è –æ–±—Ä–∞–±–æ—Ç–∫–∏ gRPC –∑–∞–ø—Ä–æ—Å–æ–≤
    """
    
    def __init__(self, 
                 streaming_workflow=None, 
                 memory_workflow=None, 
                 interrupt_workflow=None):
        """
        –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è GrpcServiceIntegration
        
        Args:
            streaming_workflow: StreamingWorkflowIntegration
            memory_workflow: MemoryWorkflowIntegration  
            interrupt_workflow: InterruptWorkflowIntegration
        """
        self.streaming_workflow = streaming_workflow
        self.memory_workflow = memory_workflow
        self.interrupt_workflow = interrupt_workflow
        self.is_initialized = False
        
        logger.info("GrpcServiceIntegration —Å–æ–∑–¥–∞–Ω")
    
    async def initialize(self) -> bool:
        """
        –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
        
        Returns:
            True –µ—Å–ª–∏ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è —É—Å–ø–µ—à–Ω–∞, False –∏–Ω–∞—á–µ
        """
        try:
            logger.info("–ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è GrpcServiceIntegration...")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç—å workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π
            if not self.streaming_workflow:
                logger.warning("‚ö†Ô∏è StreamingWorkflowIntegration –Ω–µ –ø—Ä–µ–¥–æ—Å—Ç–∞–≤–ª–µ–Ω")
            
            if not self.memory_workflow:
                logger.warning("‚ö†Ô∏è MemoryWorkflowIntegration –Ω–µ –ø—Ä–µ–¥–æ—Å—Ç–∞–≤–ª–µ–Ω")
            
            if not self.interrupt_workflow:
                logger.warning("‚ö†Ô∏è InterruptWorkflowIntegration –Ω–µ –ø—Ä–µ–¥–æ—Å—Ç–∞–≤–ª–µ–Ω")
            
            # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –µ—Å–ª–∏ –æ–Ω–∏ –¥–æ—Å—Ç—É–ø–Ω—ã
            if self.streaming_workflow:
                if getattr(self.streaming_workflow, 'is_initialized', False):
                    logger.debug("StreamingWorkflowIntegration —É–∂–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω, –ø—Ä–æ–ø—É—Å–∫–∞–µ–º –ø–æ–≤—Ç–æ—Ä–Ω—ã–π –∑–∞–ø—É—Å–∫")
                else:
                    await self.streaming_workflow.initialize()
                    logger.info("‚úÖ StreamingWorkflowIntegration –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω")
            
            if self.memory_workflow:
                if getattr(self.memory_workflow, 'is_initialized', False):
                    logger.debug("MemoryWorkflowIntegration —É–∂–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω, –ø—Ä–æ–ø—É—Å–∫–∞–µ–º –ø–æ–≤—Ç–æ—Ä–Ω—ã–π –∑–∞–ø—É—Å–∫")
                else:
                    await self.memory_workflow.initialize()
                    logger.info("‚úÖ MemoryWorkflowIntegration –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω")
            
            if self.interrupt_workflow:
                if getattr(self.interrupt_workflow, 'is_initialized', False):
                    logger.debug("InterruptWorkflowIntegration —É–∂–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω, –ø—Ä–æ–ø—É—Å–∫–∞–µ–º –ø–æ–≤—Ç–æ—Ä–Ω—ã–π –∑–∞–ø—É—Å–∫")
                else:
                    await self.interrupt_workflow.initialize()
                    logger.info("‚úÖ InterruptWorkflowIntegration –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω")
            
            self.is_initialized = True
            logger.info("‚úÖ GrpcServiceIntegration –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω —É—Å–ø–µ—à–Ω–æ")
            return True
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ GrpcServiceIntegration: {e}")
            return False
    
    async def process_request_complete(self, request_data: Dict[str, Any]) -> AsyncGenerator[Dict[str, Any], None]:
        """
        –ü–æ–ª–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ gRPC –∑–∞–ø—Ä–æ—Å–∞ —á–µ—Ä–µ–∑ –≤—Å–µ workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —Å –ø—Ä–æ–≤–µ—Ä–∫–æ–π backpressure
        
        Args:
            request_data: –î–∞–Ω–Ω—ã–µ gRPC –∑–∞–ø—Ä–æ—Å–∞
            
        Yields:
            –†–µ–∑—É–ª—å—Ç–∞—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∏–ª–∏ –æ—à–∏–±–∫–∏ (error_code/error_type –¥–ª—è –º–∞–ø–ø–∏–Ω–≥–∞ –≤ grpc_server.py)
        
        –í–ê–ñ–ù–û: –ù–µ –≤—ã—Å—Ç–∞–≤–ª—è–µ–º gRPC —Å—Ç–∞—Ç—É—Å –∑–¥–µ—Å—å - —ç—Ç–æ –¥–µ–ª–∞–µ—Ç grpc_server.py (Source of Truth –¥–ª—è gRPC –∫–æ–¥–æ–≤)
        """
        if not self.is_initialized:
            logger.error("‚ùå GrpcServiceIntegration –Ω–µ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä–æ–≤–∞–Ω")
            yield {
                'success': False,
                'error': 'GrpcServiceIntegration not initialized',
                'error_code': 'INTERNAL',
                'error_type': 'not_initialized',
                'text_response': '',
                'audio_chunks': []
            }
            return
        
        # –ò–∑–≤–ª–µ–∫–∞–µ–º –¥–∞–Ω–Ω—ã–µ –∏–∑ –∑–∞–ø—Ä–æ—Å–∞
        hardware_id = request_data.get('hardware_id', 'unknown')
        session_id = request_data.get('session_id')
        
        # –ö–†–ò–¢–ò–ß–ù–û: session_id –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω –≤ grpc_server.py
        if not session_id:
            logger.error(
                f"‚ùå session_id –æ—Ç—Å—É—Ç—Å—Ç–≤—É–µ—Ç - –Ω–∞—Ä—É—à–µ–Ω–∏–µ Source of Truth",
                extra={
                    'scope': 'grpc_service',
                    'method': 'process_request_complete',
                    'decision': 'error',
                    'ctx': {'reason': 'missing_session_id'}
                }
            )
            yield {
                'success': False,
                'error': 'session_id must be provided by gRPC layer',
                'error_code': 'INVALID_ARGUMENT',
                'error_type': 'missing_session_id',
                'text_response': '',
            }
            return
        
        # CENTRALIZED BACKPRESSURE GUARD: –ø—Ä–æ–≤–µ—Ä—è–µ–º –ª–∏–º–∏—Ç –Ω–∞ —Å—Ç—Ä–∏–º—ã
        # –õ–µ–Ω–∏–≤—ã–π –∏–º–ø–æ—Ä—Ç –¥–ª—è –∏–∑–±–µ–∂–∞–Ω–∏—è —Ü–∏–∫–ª–∏—á–µ—Å–∫–∏—Ö –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–µ–π
        from modules.grpc_service.core.backpressure import get_backpressure_manager
        backpressure_manager = get_backpressure_manager()
        stream_acquired, error_msg = await backpressure_manager.acquire_stream(session_id, hardware_id)
        if not stream_acquired:
            logger.warning(
                f"‚ö†Ô∏è Backpressure guard: stream rejected for {session_id}",
                extra={
                    'scope': 'grpc_service',
                    'method': 'process_request_complete',
                    'decision': 'reject',
                    'ctx': {
                        'session_id': session_id,
                        'hardware_id': hardware_id,
                        'error': error_msg
                    }
                }
            )
            yield {
                'success': False,
                'error': error_msg or 'Stream limit exceeded',
                'error_code': 'RESOURCE_EXHAUSTED',
                'error_type': 'stream_limit_exceeded',
                'text_response': '',
            }
            return
        
        try:
            logger.info(f"üîÑ –ù–∞—á–∞–ª–æ –ø–æ–ª–Ω–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∑–∞–ø—Ä–æ—Å–∞: {session_id}")
            
            # –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º session_id –≤ request_data (–µ—Å–ª–∏ –µ—â–µ –Ω–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω)
            request_data.setdefault('session_id', session_id)

            # –ò—Å–ø–æ–ª—å–∑—É–µ–º InterruptWorkflowIntegration –¥–ª—è –±–µ–∑–æ–ø–∞—Å–Ω–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏
            async def _process_full_workflow():
                async for item in self._process_full_workflow_internal(
                    request_data,
                    hardware_id,
                    session_id,
                    backpressure_manager
                ):
                    yield item
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —á–µ—Ä–µ–∑ InterruptWorkflowIntegration
            if self.interrupt_workflow:
                logger.debug("–ò—Å–ø–æ–ª—å–∑—É–µ–º InterruptWorkflowIntegration –¥–ª—è –±–µ–∑–æ–ø–∞—Å–Ω–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏")
                try:
                    async for item in self.interrupt_workflow.process_with_interrupts(
                        _process_full_workflow, 
                        hardware_id, 
                        session_id
                    ):
                        yield item
                except Exception as e:
                    logger.error(f"–û—à–∏–±–∫–∞ –≤ InterruptWorkflowIntegration: {e}")
                    # Fallback –∫ –ø—Ä—è–º–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–µ
                    async for item in self._process_full_workflow_internal(
                        request_data,
                        hardware_id,
                        session_id,
                        backpressure_manager
                    ):
                        yield item
            else:
                logger.debug("InterruptWorkflowIntegration –Ω–µ –¥–æ—Å—Ç—É–ø–µ–Ω, –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –Ω–∞–ø—Ä—è–º—É—é")
                async for result in self._process_full_workflow_internal(
                    request_data,
                    hardware_id,
                    session_id,
                    backpressure_manager
                ):
                    yield result
            
            logger.info(f"‚úÖ –ü–æ–ª–Ω–∞—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞: {session_id}")
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª–Ω–æ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∑–∞–ø—Ä–æ—Å–∞: {e}")
            # –ö–†–ò–¢–ò–ß–ù–û: –í—Å–µ–≥–¥–∞ –ø—Ä–µ–¥–æ—Å—Ç–∞–≤–ª—è–µ–º error_code –¥–ª—è –º–∞–ø–ø–∏–Ω–≥–∞ –≤ grpc_server.py
            yield {
                'success': False,
                'error': str(e),
                'error_code': 'INTERNAL',  # –ü–æ —É–º–æ–ª—á–∞–Ω–∏—é INTERNAL –¥–ª—è –Ω–µ–∏–∑–≤–µ—Å—Ç–Ω—ã—Ö –æ—à–∏–±–æ–∫
                'error_type': 'processing_error',
                'text_response': '',
                'audio_chunks': []
            }
        finally:
            # CENTRALIZED BACKPRESSURE GUARD: –æ—Å–≤–æ–±–æ–∂–¥–∞–µ–º —Å—Ç—Ä–∏–º (–∏–¥–µ–º–ø–æ—Ç–µ–Ω—Ç–Ω–æ)
            await backpressure_manager.release_stream(session_id)
    
    async def _process_full_workflow_internal(
        self,
        request_data: Dict[str, Any],
        hardware_id: str,
        session_id: str,
        backpressure_manager
    ) -> AsyncGenerator[Dict[str, Any], None]:
        """
        –í–Ω—É—Ç—Ä–µ–Ω–Ω—è—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ –ø–æ–ª–Ω–æ–≥–æ workflow
        
        Args:
            request_data: –î–∞–Ω–Ω—ã–µ –∑–∞–ø—Ä–æ—Å–∞
            hardware_id: –ò–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ç–æ—Ä –æ–±–æ—Ä—É–¥–æ–≤–∞–Ω–∏—è
            session_id: –ò–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ç–æ—Ä —Å–µ—Å—Å–∏–∏
            
        Yields:
            –†–µ–∑—É–ª—å—Ç–∞—Ç—ã –æ–±—Ä–∞–±–æ—Ç–∫–∏
        """
        try:
            logger.debug(f"–í–Ω—É—Ç—Ä–µ–Ω–Ω—è—è –æ–±—Ä–∞–±–æ—Ç–∫–∞ workflow –¥–ª—è {session_id}")
            
            # –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —á–µ—Ä–µ–∑ StreamingWorkflowIntegration
            collected_sentences: list[str] = []
            audio_delivered = False
            has_emitted = False
            final_response_text = ''
            prompt_text = request_data.get('text', '')
            
            # –î–ò–ê–ì–ù–û–°–¢–ò–ö–ê: –õ–æ–≥–∏—Ä–æ–≤–∞–Ω–∏–µ –ø—Ä–æ–º–ø—Ç–∞ –¥–ª—è –¥–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∏ –ø—É—Å—Ç—ã—Ö –æ—Ç–≤–µ—Ç–æ–≤
            logger.info(
                f"üìã Prompt –¥–ª—è –æ–±—Ä–∞–±–æ—Ç–∫–∏: len={len(prompt_text)}, content='{prompt_text[:100]}...'",
                extra={
                    'scope': 'grpc_service',
                    'method': '_process_full_workflow_internal',
                    'session_id': session_id,
                    'prompt_len': len(prompt_text),
                    'has_screenshot': bool(request_data.get('screenshot'))
                }
            )
            
            # –í–ê–õ–ò–î–ê–¶–ò–Ø: –ü—Ä–æ–≤–µ—Ä–∫–∞ –ø—É—Å—Ç–æ–≥–æ –ø—Ä–æ–º–ø—Ç–∞
            if not prompt_text or not prompt_text.strip():
                logger.warning(
                    f"‚ö†Ô∏è –ü–£–°–¢–û–ô –ü–†–û–ú–ü–¢ –≤ request_data –¥–ª—è session_id={session_id}",
                    extra={
                        'scope': 'grpc_service',
                        'method': '_process_full_workflow_internal',
                        'session_id': session_id,
                        'decision': 'error',
                        'ctx': {'reason': 'empty_prompt', 'prompt_len': len(prompt_text)}
                    }
                )
                yield {
                    'success': False,
                    'error': 'Empty prompt: text field is required',
                    'error_code': 'INVALID_ARGUMENT',
                    'error_type': 'empty_prompt',
                    'text_response': '',
                }
                return

            if self.streaming_workflow:
                logger.info(
                    f"üîÑ –í—ã–∑–æ–≤ StreamingWorkflowIntegration.process_request_streaming: "
                    f"session_id={session_id}, workflow_instance_id={id(self.streaming_workflow)}",
                    extra={
                        'scope': 'grpc_service',
                        'method': '_process_full_workflow_internal',
                        'session_id': session_id,
                        'workflow_instance_id': id(self.streaming_workflow)
                    }
                )
                async for result in self.streaming_workflow.process_request_streaming(request_data):
                    will_emit = bool(result.get('text_response')) or bool(result.get('command_payload'))
                    if isinstance(result.get('audio_chunk'), (bytes, bytearray)):
                        will_emit = True
                    if result.get('audio_chunks'):
                        will_emit = True

                    # CENTRALIZED BACKPRESSURE GUARD: –ø—Ä–æ–≤–µ—Ä—è–µ–º rate limit —Ç–æ–ª—å–∫–æ –¥–ª—è —Ä–µ–∞–ª—å–Ω—ã—Ö –æ—Ç–ø—Ä–∞–≤–æ–∫
                    if will_emit:
                        message_allowed, rate_error = await backpressure_manager.check_message_rate(session_id)
                        if not message_allowed:
                            logger.warning(
                                f"‚ö†Ô∏è Backpressure guard: message rate limit exceeded for {session_id}",
                                extra={
                                    'scope': 'grpc_service',
                                    'method': 'process_request_complete',
                                    'decision': 'reject',
                                    'ctx': {
                                        'session_id': session_id,
                                        'error': rate_error,
                                        'has_emitted': has_emitted
                                    }
                                }
                            )
                            if has_emitted:
                                # –ü–æ–ª–∏—Ç–∏–∫–∞: –Ω–µ —Å–º–µ—à–∏–≤–∞–µ–º –¥–∞–Ω–Ω—ã–µ –∏ –æ—à–∏–±–∫–∏ ‚Äî —Å–∏–≥–Ω–∞–ª–∏–∑–∏—Ä—É–µ–º –æ —Ä–∞–Ω–Ω–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏–∏
                                # –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —Å–ø–µ—Ü–∏–∞–ª—å–Ω—ã–π item —Å —Ñ–ª–∞–≥–æ–º silent=True, —á—Ç–æ–±—ã StreamAudio –º–æ–≥ –≤—ã–π—Ç–∏ –¥–æ end_message
                                yield {
                                    'success': False,
                                    'error': rate_error or 'Message rate limit exceeded',
                                    'error_code': 'RESOURCE_EXHAUSTED',
                                    'error_type': 'rate_limit_exceeded',
                                    'silent': True,  # –§–ª–∞–≥ –¥–ª—è StreamAudio: —Ç–∏—Ö–æ–µ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–µ –±–µ–∑ error_message
                                    'text_response': '',
                                }
                                return
                            yield {
                                'success': False,
                                'error': rate_error or 'Message rate limit exceeded',
                                'error_code': 'RESOURCE_EXHAUSTED',
                                'error_type': 'rate_limit_exceeded',
                                'text_response': '',
                            }
                            return
                    
                    try:
                        has_audio = 'audio_chunk' in result and isinstance(result.get('audio_chunk'), (bytes, bytearray))
                        sz = (len(result['audio_chunk']) if has_audio else 0)
                        txt = result.get('text_response')
                        logger.info(f'StreamingWorkflowIntegration ‚Üí result: text_len={(len(txt) if txt else 0)}, audio_bytes={sz}')
                        if txt:
                            collected_sentences.append(txt)
                        if has_audio:
                            audio_delivered = True
                        if result.get('is_final'):
                            final_response_text = result.get('text_full_response', '') or " ".join(collected_sentences).strip()
                        # –§–∞–∑–∞ 3: –ü–µ—Ä–µ–¥–∞—ë–º command_payload –¥–∞–ª—å—à–µ –≤ gRPC —Å–ª–æ–π
                        if result.get('command_payload'):
                            logger.debug(f"MCP command_payload –ø–µ—Ä–µ–¥–∞–Ω –≤ gRPC —Å–ª–æ–π: {result.get('command_payload').get('payload', {}).get('command', 'unknown')}")
                    except Exception:
                        pass
                    yield result
                    if will_emit:
                        has_emitted = True
            else:
                logger.warning("‚ö†Ô∏è StreamingWorkflowIntegration –Ω–µ –¥–æ—Å—Ç—É–ø–µ–Ω, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –±–∞–∑–æ–≤—ã–π –æ—Ç–≤–µ—Ç")
                yield {
                    'success': True,
                    'text_response': request_data.get('text', ''),
                    'audio_chunks': []
                }
            
            # 3. –§–æ–Ω–æ–≤–æ —Å–æ—Ö—Ä–∞–Ω—è–µ–º –≤ –ø–∞–º—è—Ç—å (–Ω–µ–±–ª–æ–∫–∏—Ä—É—é—â–µ–µ)
            if self.memory_workflow:
                logger.debug("–§–æ–Ω–æ–≤–æ–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –≤ –ø–∞–º—è—Ç—å")
                # –î–æ–±–∞–≤–ª—è–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∫ –¥–∞–Ω–Ω—ã–º –¥–ª—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
                save_data = request_data.copy()
                save_data['processed_text'] = final_response_text or " ".join(collected_sentences).strip()
                save_data['audio_generated'] = audio_delivered
                save_data['prompt'] = prompt_text
                save_data['response'] = final_response_text or save_data['processed_text']
                save_data['sentences'] = collected_sentences
                
                if save_data.get('prompt') and save_data.get('response'):
                    await self.memory_workflow.save_to_memory_background(save_data)
                    logger.debug("‚úÖ –§–æ–Ω–æ–≤–æ–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –≤ –ø–∞–º—è—Ç—å –∑–∞–ø—É—â–µ–Ω–æ")
                else:
                    logger.debug("‚ö†Ô∏è –§–æ–Ω–æ–≤–æ–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ –ø—Ä–æ–ø—É—â–µ–Ω–æ: –Ω–µ–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ –¥–∞–Ω–Ω—ã—Ö (prompt/response)")
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –≤–Ω—É—Ç—Ä–µ–Ω–Ω–µ–π –æ–±—Ä–∞–±–æ—Ç–∫–∏ workflow: {e}")
            # –ö–†–ò–¢–ò–ß–ù–û: –í—Å–µ–≥–¥–∞ –ø—Ä–µ–¥–æ—Å—Ç–∞–≤–ª—è–µ–º error_code –¥–ª—è –º–∞–ø–ø–∏–Ω–≥–∞ –≤ grpc_server.py
            yield {
                'success': False,
                'error': str(e),
                'error_code': 'INTERNAL',  # –ü–æ —É–º–æ–ª—á–∞–Ω–∏—é INTERNAL –¥–ª—è –Ω–µ–∏–∑–≤–µ—Å—Ç–Ω—ã—Ö –æ—à–∏–±–æ–∫
                'error_type': 'workflow_error',
                'text_response': '',
                'audio_chunks': []
            }
    
    async def get_status(self) -> Dict[str, Any]:
        """
        –ü–æ–ª—É—á–µ–Ω–∏–µ —Å—Ç–∞—Ç—É—Å–∞ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
        
        Returns:
            –°–ª–æ–≤–∞—Ä—å —Å–æ —Å—Ç–∞—Ç—É—Å–æ–º
        """
        try:
            status = {
                'initialized': self.is_initialized,
                'streaming_workflow': self.streaming_workflow is not None,
                'memory_workflow': self.memory_workflow is not None,
                'interrupt_workflow': self.interrupt_workflow is not None
            }
            
            # –ü–æ–ª—É—á–∞–µ–º —Å—Ç–∞—Ç—É—Å workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–π –µ—Å–ª–∏ –æ–Ω–∏ –¥–æ—Å—Ç—É–ø–Ω—ã
            if self.streaming_workflow:
                status['streaming_workflow_initialized'] = getattr(self.streaming_workflow, 'is_initialized', False)
            
            if self.memory_workflow:
                status['memory_workflow_initialized'] = getattr(self.memory_workflow, 'is_initialized', False)
            
            if self.interrupt_workflow:
                status['interrupt_workflow_initialized'] = getattr(self.interrupt_workflow, 'is_initialized', False)
            
            return status
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å—Ç–∞—Ç—É—Å–∞: {e}")
            return {
                'initialized': False,
                'error': str(e)
            }
    
    async def cleanup(self):
        """–û—á–∏—Å—Ç–∫–∞ —Ä–µ—Å—É—Ä—Å–æ–≤"""
        try:
            logger.info("–û—á–∏—Å—Ç–∫–∞ GrpcServiceIntegration...")
            
            # –û—á–∏—â–∞–µ–º workflow –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ –µ—Å–ª–∏ –æ–Ω–∏ –¥–æ—Å—Ç—É–ø–Ω—ã
            if self.streaming_workflow and hasattr(self.streaming_workflow, 'cleanup'):
                await self.streaming_workflow.cleanup()
                logger.debug("StreamingWorkflowIntegration –æ—á–∏—â–µ–Ω")
            
            if self.memory_workflow and hasattr(self.memory_workflow, 'cleanup'):
                await self.memory_workflow.cleanup()
                logger.debug("MemoryWorkflowIntegration –æ—á–∏—â–µ–Ω")
            
            if self.interrupt_workflow and hasattr(self.interrupt_workflow, 'cleanup'):
                await self.interrupt_workflow.cleanup()
                logger.debug("InterruptWorkflowIntegration –æ—á–∏—â–µ–Ω")
            
            self.is_initialized = False
            logger.info("‚úÖ GrpcServiceIntegration –æ—á–∏—â–µ–Ω")
            
        except Exception as e:
            logger.error(f"‚ùå –û—à–∏–±–∫–∞ –æ—á–∏—Å—Ç–∫–∏ GrpcServiceIntegration: {e}")
